--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "mysql2": "^3.13.0",
     "next": "15.2.1",
     "react": "^19.0.0",
